remove api key management from admin
